login, signin state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -19,15 +19,27 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react/next", "react-dom/next"],
-    "baseUrl": ".",
+    "types": ["react/next", "react-dom/next", "node"],
+    "baseUrl": "./src",
     "paths": {
       "@components/*": [
         "src/components/*"
-      ] 
+      ],
+      "@pages/*": [
+        "src/pages/*"
+      ],
+      "@features/*": [
+        "src/features/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@app/*": [
+        "src/app/*"
+      ],
     }
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
