--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "main": "src/index.tsx",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
