--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "@windmill/react-ui": "^0.6.0",
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
