--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react-dom": "^18.0.0",
     "@windmill/react-ui": "^0.6.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
+    "faker": "^6.6.6",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
@@ -60,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-datepicker": "^4.4.0",
     "autoprefixer": "^9",
     "postcss": "^7",
